--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1242 2008/03/24 00:10:39 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1244 2008/03/24 13:27:43 eva Exp $
+
+  24 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> use.local.desc:
+  add tracker and nautilus local use flag for media-video/totem
+
+  24 Mar 2008; Joerg Bornkessel <hd_brummy@gentoo.org> use.local.desc:
+  add description, local use-flag media-video/vdr: atsc ttxtsubs deltimeshiftrec
 
   24 Mar 2008; Mart Raudsepp <leio@gentoo.org> use.local.desc:
   Add local fuse and keyring USE flags for gnome-base/gvfs too
