--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Mar 2008; Fabian Groffen <grobian@gentoo.org> darwin/package.mask:
+  Mask Xcode Tools 3.1 Beta tools (gcc-apple for the moment)
+
   24 Mar 2008; Fabian Groffen <grobian@gentoo.org> darwin/package.mask:
   Mask gvim-7.1.285.
 
