--- a/dev-java/sun-jdk/ChangeLog
+++ b/dev-java/sun-jdk/ChangeLog
@@ -1,6 +1,28 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.227 2008/03/26 22:14:35 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.231 2008/03/27 20:18:28 caster Exp $
+
+*sun-jdk-1.6.0.05-r1 (27 Mar 2008)
+*sun-jdk-1.5.0.15-r1 (27 Mar 2008)
+
+  27 Mar 2008; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.4.2.16.ebuild,
+  -sun-jdk-1.5.0.13.ebuild, -sun-jdk-1.5.0.14.ebuild,
+  +sun-jdk-1.5.0.15-r1.ebuild, -sun-jdk-1.6.0.03.ebuild,
+  -sun-jdk-1.6.0.04.ebuild, +sun-jdk-1.6.0.05-r1.ebuild:
+  Remove vulnerable versions. Revbump to create Class Data Sharing
+  archive(s), bug #207282.
+
+  27 Mar 2008; Markus Meier <maekke@gentoo.org> sun-jdk-1.5.0.15.ebuild,
+  sun-jdk-1.6.0.05.ebuild:
+  amd64 stable, security bug #212425
+
+  27 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
+  sun-jdk-1.6.0.05.ebuild:
+  stable x86, security bug 212425
+
+  27 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
+  sun-jdk-1.5.0.15.ebuild:
+  stable x86, security bug 212425
 
 *sun-jdk-1.6.0.05 (26 Mar 2008)
 *sun-jdk-1.5.0.15 (26 Mar 2008)
