--- a/sys-apps/sed/ChangeLog
+++ b/sys-apps/sed/ChangeLog
@@ -1,6 +1,21 @@
 # ChangeLog for sys-apps/sed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/ChangeLog,v 1.85 2008/01/30 00:26:46 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/ChangeLog,v 1.90 2008/03/29 16:45:30 armin76 Exp $
+
+  29 Mar 2008; Raúl Porcel <armin76@gentoo.org> sed-4.1.5-r1.ebuild:
+  alpha/ia64/sparc stable wrt #215072
+
+  29 Mar 2008; Brent Baude <ranger@gentoo.org> sed-4.1.5-r1.ebuild:
+  stable ppc64, bug 215072
+
+  28 Mar 2008; Markus Meier <maekke@gentoo.org> sed-4.1.5-r1.ebuild:
+  amd64/x86 stable, bug #215072
+
+  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> sed-4.1.5-r1.ebuild:
+  Stable for HPPA (bug #215072).
+
+  28 Mar 2008; Brent Baude <ranger@gentoo.org> sed-4.1.5-r1.ebuild:
+  stable ppc, bug 215072
 
 *sed-4.1.5-r1 (30 Jan 2008)
 
