Mask sys-apps/file-4.24 because it doesn't build on Solaris (at least) due to autotools screwup, I can't fix it easily.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020109

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask sys-apps/file-4.24 because it doesn't build on Solaris (at least) due
+  to autotools screwup, I can't fix it easily.
+
   28 Mar 2008; Fabian Groffen <grobian@gentoo.org> darwin/package.mask:
   Mask Xcode Tools 3.1 Beta tools (gcc-apple for the moment)
 
