Mask gcc-4.3.0 as it appears to break more than it solves
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020133

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask gcc-4.3.0 as it appears to break more than it solves
+
   30 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask sys-apps/file-4.24 because it doesn't build on Solaris (at least) due
   to autotools screwup, I can't fix it easily.
