Create a mask entry for root-requiring packages, initially with net-analyzer/mtr
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020138

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Apr 2008; Fabian Groffen <fabian@gentoo.org> package.mask:
+  Create a mask entry for root-requiring packages, initially with
+  net-analyzer/mtr
+
   31 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask gcc-4.3.0 as it appears to break more than it solves
 
