sync profiles (ignore chris' profiles changes, defer to later)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020209

--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,262 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1271 2008/03/31 14:55:33 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1280 2008/04/03 05:04:11 graaff Exp $
+
+  03 Apr 2008; Hans de Graaff <graaff@gentoo.org> package.mask:
+  Add cadaver 0.23.2 to the neon package mask as it only works with masked
+  versions of neon.
+
+  03 Apr 2008; Mark Loeser <halcy0n@gentoo.org> package.mask:
+  mask dev-libs/swl due to dead upstream and not working properly; bug
+  #206163
+
+  02 Apr 2008; Mart Raudsepp <leio@gentoo.org> package.mask:
+  Upgrade sys-devel/libtool mask to include 2.2.2, as it still breaks things
+  all over and there have been no objections for masking on the tracker bug.
+
+  02 Apr 2008; Mart Raudsepp <leio@gentoo.org> package.mask:
+  Unmask swfdec-0.6 and co
+
+  01 Apr 2008; Ryan Hill <dirtyepic@gentoo.org> use.local.desc:
+  Unvague pth local USE description for gpgme.
+
+  01 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> profiles.desc:
+  I never added the desktop and developer sub-profiles for s390, so removing
+  them here to keep repoman happy.
+
+  01 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  +arch/alpha/make.defaults, +arch/alpha/package.mask,
+  +arch/alpha/package.use.force, +arch/alpha/package.use.mask,
+  +arch/alpha/use.mask, +arch/alpha/virtuals, +arch/amd64/make.defaults,
+  +arch/amd64/no-multilib/make.defaults,
+  +arch/amd64/no-multilib/package.mask,
+  +arch/amd64/no-multilib/package.use.mask, +arch/amd64/no-multilib/parent,
+  +arch/amd64/no-multilib/use.mask, +arch/amd64/package.mask,
+  +arch/amd64/package.use.force, +arch/amd64/package.use.mask,
+  +arch/amd64/parent, +arch/amd64/profile.bashrc, +arch/amd64/use.mask,
+  +arch/amd64/virtuals, +arch/arm/make.defaults, +arch/arm/package.use.mask,
+  +arch/arm/packages, +arch/arm/use.mask, +arch/arm/virtuals,
+  +arch/hppa/make.defaults, +arch/hppa/package.mask,
+  +arch/hppa/package.use.force, +arch/hppa/package.use.mask,
+  +arch/hppa/packages, +arch/hppa/use.mask, +arch/hppa/virtuals,
+  +arch/ia64/make.defaults, +arch/ia64/package.mask,
+  +arch/ia64/package.use.force, +arch/ia64/package.use.mask,
+  +arch/ia64/packages, +arch/ia64/use.mask, +arch/ia64/virtuals,
+  +arch/m68k/make.defaults, +arch/m68k/package.use.force,
+  +arch/m68k/package.use.mask, +arch/m68k/packages, +arch/m68k/use.mask,
+  +arch/mips/cobalt/make.defaults, +arch/mips/cobalt/parent,
+  +arch/mips/cobalt/virtuals, +arch/mips/make.defaults,
+  +arch/mips/package.mask, +arch/mips/package.use.mask, +arch/mips/packages,
+  +arch/mips/use.mask, +arch/mips/virtuals, +arch/powerpc/package.use.force,
+  +arch/powerpc/package.use.mask, +arch/powerpc/packages,
+  +arch/powerpc/ppc32/make.defaults, +arch/powerpc/ppc32/parent,
+  +arch/powerpc/ppc32/pegasos/parent, +arch/powerpc/ppc32/pegasos/virtuals,
+  +arch/powerpc/ppc64/make.defaults, +arch/powerpc/ppc64/package.mask,
+  +arch/powerpc/ppc64/parent, +arch/powerpc/ppc64/use.mask,
+  +arch/powerpc/use.mask, +arch/powerpc/virtuals, +arch/s390/make.defaults,
+  +arch/s390/package.use.mask, +arch/s390/packages, +arch/s390/use.mask,
+  +arch/s390/virtuals, +arch/sh/make.defaults, +arch/sh/package.use.mask,
+  +arch/sh/packages, +arch/sh/use.mask, +arch/sh/virtuals,
+  +arch/sparc/make.defaults, +arch/sparc/package.mask,
+  +arch/sparc/package.use.mask, +arch/sparc/packages, +arch/sparc/parent,
+  +arch/sparc/use.mask, +arch/sparc/virtuals, +arch/x86/make.defaults,
+  +arch/x86/package.mask, +arch/x86/package.use.mask, +arch/x86/packages,
+  +arch/x86/use.mask, +arch/x86/virtuals, +arch/x86/xbox/make.defaults,
+  +arch/x86/xbox/packages, +arch/x86/xbox/parent, +arch/x86/xbox/virtuals,
+  -default-linux/amd64/dev/2008.0/desktop/make.defaults,
+  -default-linux/amd64/dev/2008.0/desktop/parent,
+  -default-linux/amd64/dev/2008.0/desktop/virtuals,
+  -default-linux/amd64/dev/2008.0/make.defaults,
+  -default-linux/amd64/dev/2008.0/no-multilib/make.defaults,
+  -default-linux/amd64/dev/2008.0/no-multilib/package.mask,
+  -default-linux/amd64/dev/2008.0/no-multilib/package.use.mask,
+  -default-linux/amd64/dev/2008.0/no-multilib/parent,
+  -default-linux/amd64/dev/2008.0/no-multilib/use.mask,
+  -default-linux/amd64/dev/2008.0/package.use.mask,
+  -default-linux/amd64/dev/2008.0/packages,
+  -default-linux/amd64/dev/2008.0/parent,
+  -default-linux/amd64/dev/2008.0/server/make.defaults,
+  -default-linux/amd64/dev/2008.0/server/parent,
+  -default-linux/amd64/dev/2008.0/server/profile.bashrc,
+  -default-linux/amd64/dev/2008.0/use.mask,
+  -default-linux/x86/dev/2007.1/desktop/make.defaults,
+  -default-linux/x86/dev/2007.1/desktop/parent,
+  -default-linux/x86/dev/2007.1/desktop/virtuals,
+  -default-linux/x86/dev/2007.1/make.defaults,
+  -default-linux/x86/dev/2007.1/packages,
+  -default-linux/x86/dev/2007.1/parent,
+  -default-linux/x86/dev/2007.1/server/make.defaults,
+  -default-linux/x86/dev/2007.1/server/parent,
+  -default-linux/x86/dev/2007.1/server/profile.bashrc,
+  -default-linux/x86/dev/2008.0/desktop/make.defaults,
+  -default-linux/x86/dev/2008.0/desktop/parent,
+  -default-linux/x86/dev/2008.0/desktop/virtuals,
+  -default-linux/x86/dev/2008.0/make.defaults,
+  -default-linux/x86/dev/2008.0/packages,
+  -default-linux/x86/dev/2008.0/parent,
+  -default-linux/x86/dev/2008.0/server/make.defaults,
+  -default-linux/x86/dev/2008.0/server/parent,
+  -default-linux/x86/dev/2008.0/server/profile.bashrc,
+  +default/linux/alpha/2008.0/desktop/parent,
+  +default/linux/alpha/2008.0/developer/parent,
+  +default/linux/alpha/2008.0/no-nptl/parent,
+  +default/linux/alpha/2008.0/parent,
+  +default/linux/alpha/2008.0/server/parent, +default/linux/alpha/parent,
+  +default/linux/amd64/2008.0/desktop/parent,
+  +default/linux/amd64/2008.0/developer/parent,
+  +default/linux/amd64/2008.0/no-multilib/parent,
+  +default/linux/amd64/2008.0/parent,
+  +default/linux/amd64/2008.0/server/parent, +default/linux/amd64/parent,
+  +default/linux/arm/2008.0/desktop/parent,
+  +default/linux/arm/2008.0/developer/parent,
+  +default/linux/arm/2008.0/parent, +default/linux/arm/2008.0/server/parent,
+  +default/linux/arm/parent, +default/linux/hppa/2008.0/desktop/parent,
+  +default/linux/hppa/2008.0/developer/parent,
+  +default/linux/hppa/2008.0/parent,
+  +default/linux/hppa/2008.0/server/parent, +default/linux/hppa/parent,
+  +default/linux/ia64/2008.0/desktop/parent,
+  +default/linux/ia64/2008.0/developer/parent,
+  +default/linux/ia64/2008.0/parent,
+  +default/linux/ia64/2008.0/server/parent, +default/linux/ia64/parent,
+  +default/linux/m68k/2008.0/desktop/parent,
+  +default/linux/m68k/2008.0/developer/parent,
+  +default/linux/m68k/2008.0/parent,
+  +default/linux/m68k/2008.0/server/parent, +default/linux/m68k/parent,
+  +default/linux/make.defaults,
+  +default/linux/mips/2008.0/cobalt/desktop/parent,
+  +default/linux/mips/2008.0/cobalt/developer/parent,
+  +default/linux/mips/2008.0/cobalt/parent,
+  +default/linux/mips/2008.0/cobalt/server/parent,
+  +default/linux/mips/2008.0/desktop/parent,
+  +default/linux/mips/2008.0/developer/parent,
+  +default/linux/mips/2008.0/parent,
+  +default/linux/mips/2008.0/server/parent, +default/linux/mips/parent,
+  +default/linux/package.mask, +default/linux/package.use.mask,
+  +default/linux/packages, +default/linux/packages.build,
+  +default/linux/powerpc/parent,
+  +default/linux/powerpc/ppc32/2008.0/desktop/parent,
+  +default/linux/powerpc/ppc32/2008.0/developer/parent,
+  +default/linux/powerpc/ppc32/2008.0/parent,
+  +default/linux/powerpc/ppc32/2008.0/server/parent,
+  +default/linux/powerpc/ppc32/parent,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/desktop/parent,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/developer/parent,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/make.defaults,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/parent,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/server/parent,
+  +default/linux/powerpc/ppc64/2008.0/32bit-userland/use.mask,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/desktop/parent,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/developer/parent,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/parent,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/server/parent,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/use.mask,
+  +default/linux/powerpc/ppc64/2008.0/64bit-userland/virtuals,
+  +default/linux/powerpc/ppc64/2008.0/desktop/parent,
+  +default/linux/powerpc/ppc64/2008.0/developer/parent,
+  +default/linux/powerpc/ppc64/2008.0/parent,
+  +default/linux/powerpc/ppc64/2008.0/server/parent,
+  +default/linux/powerpc/ppc64/parent, +default/linux/s390/2008.0/parent,
+  +default/linux/s390/2008.0/server/parent, +default/linux/s390/parent,
+  +default/linux/sh/2008.0/desktop/parent,
+  +default/linux/sh/2008.0/developer/parent,
+  +default/linux/sh/2008.0/parent, +default/linux/sh/2008.0/server/parent,
+  +default/linux/sh/parent, +default/linux/sparc/2008.0/desktop/parent,
+  +default/linux/sparc/2008.0/developer/parent,
+  +default/linux/sparc/2008.0/parent,
+  +default/linux/sparc/2008.0/server/parent, +default/linux/sparc/parent,
+  +default/linux/use.mask, +default/linux/virtuals,
+  +default/linux/x86/2008.0/desktop/parent,
+  +default/linux/x86/2008.0/developer/parent,
+  +default/linux/x86/2008.0/no-nptl/parent,
+  +default/linux/x86/2008.0/parent, +default/linux/x86/2008.0/server/parent,
+  +default/linux/x86/gcc2/parent, +default/linux/x86/parent,
+  +default/linux/x86/vserver/parent, +features/32bit-native/make.defaults,
+  +features/32bit-native/packages, +features/32bit-native/profile.bashrc,
+  +features/32bit-native/use.force, +features/32bit-native/use.mask,
+  +features/32bit-userland/make.defaults, +features/32bit-userland/packages,
+  +features/32bit-userland/parent, +features/32bit-userland/profile.bashrc,
+  +features/64bit-native/make.defaults, +features/64bit-native/package.mask,
+  +features/64bit-native/package.use.mask,
+  +features/64bit-native/profile.bashrc, +features/64bit-native/use.force,
+  +features/64bit-native/use.mask, +features/gcc2/package.mask,
+  +features/gcc2/packages, +features/gcc2/virtuals,
+  +features/multilib/make.defaults, +features/multilib/use.force,
+  +features/multilib/use.mask, +features/no-nptl/package.mask,
+  +features/no-nptl/packages, +features/no-nptl/use.mask,
+  +hardened/linux/amd64/2008.0/desktop/parent,
+  +hardened/linux/amd64/2008.0/developer/parent,
+  +hardened/linux/amd64/2008.0/make.defaults,
+  +hardened/linux/amd64/2008.0/no-multilib/make.defaults,
+  +hardened/linux/amd64/2008.0/no-multilib/parent,
+  +hardened/linux/amd64/2008.0/parent,
+  +hardened/linux/amd64/2008.0/server/parent,
+  +hardened/linux/amd64/make.defaults,
+  +hardened/linux/amd64/package.use.mask, +hardened/linux/amd64/parent,
+  +hardened/linux/amd64/use.mask,
+  +hardened/linux/ia64/2008.0/desktop/parent,
+  +hardened/linux/ia64/2008.0/developer/parent,
+  +hardened/linux/ia64/2008.0/make.defaults,
+  +hardened/linux/ia64/2008.0/parent,
+  +hardened/linux/ia64/2008.0/server/parent, +hardened/linux/ia64/parent,
+  +hardened/linux/make.defaults, +hardened/linux/package.mask,
+  +hardened/linux/package.use.mask, +hardened/linux/parent,
+  +hardened/linux/powerpc/make.defaults,
+  +hardened/linux/powerpc/package.mask, +hardened/linux/powerpc/parent,
+  +hardened/linux/powerpc/ppc32/2008.0/desktop/parent,
+  +hardened/linux/powerpc/ppc32/2008.0/developer/parent,
+  +hardened/linux/powerpc/ppc32/2008.0/make.defaults,
+  +hardened/linux/powerpc/ppc32/2008.0/parent,
+  +hardened/linux/powerpc/ppc32/2008.0/server/parent,
+  +hardened/linux/powerpc/ppc32/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/desktop/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/developer/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/make.defaults,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/server/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/32bit-userland/use.mask,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/desktop/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/developer/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/server/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/use.mask,
+  +hardened/linux/powerpc/ppc64/2008.0/64bit-userland/virtuals,
+  +hardened/linux/powerpc/ppc64/2008.0/desktop/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/developer/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/make.defaults,
+  +hardened/linux/powerpc/ppc64/2008.0/parent,
+  +hardened/linux/powerpc/ppc64/2008.0/server/parent,
+  +hardened/linux/powerpc/ppc64/package.use.mask,
+  +hardened/linux/powerpc/ppc64/parent,
+  +hardened/linux/powerpc/ppc64/use.mask,
+  +hardened/linux/powerpc/ppc64/virtuals, +hardened/linux/use.mask,
+  +hardened/linux/virtuals, +hardened/linux/x86/2008.0/desktop/parent,
+  +hardened/linux/x86/2008.0/developer/parent,
+  +hardened/linux/x86/2008.0/make.defaults,
+  +hardened/linux/x86/2008.0/no-nptl/parent,
+  +hardened/linux/x86/2008.0/parent,
+  +hardened/linux/x86/2008.0/server/parent,
+  +hardened/linux/x86/make.defaults,
+  +hardened/linux/x86/minimal/make.defaults,
+  +hardened/linux/x86/minimal/parent, +hardened/linux/x86/minimal/use.mask,
+  +hardened/linux/x86/minimal/virtuals, +hardened/linux/x86/package.mask,
+  +hardened/linux/x86/package.use.mask, +hardened/linux/x86/parent,
+  +hardened/linux/x86/use.mask, profiles.desc,
+  +releases/2008.0/make.defaults, +releases/2008.0/packages,
+  +releases/2008.0/parent, +releases/make.defaults,
+  +targets/desktop/make.defaults, +targets/desktop/package.use,
+  +targets/developer/make.defaults, +targets/developer/parent,
+  +targets/server/make.defaults, +targets/server/profile.bashrc,
+  +targets/vserver/package.mask, +targets/vserver/packages,
+  +targets/vserver/virtuals, uclibc/make.defaults, uclibc/parent:
+  Huge initial 2008.0 profile commit. This will need to be adjusted synced
+  with the current masks and such in the tree, but this will work for people
+  doing beta installs. Enjoy.
+
+  01 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> profiles.desc:
+  Move mips profiles to development, since it is now an experimental arch.
+
+  01 Apr 2008; Ben de Groot <yngwin@gentoo.org> use.local.desc:
+  Adding normalize and wav local USE flags for media-sound/rubyripper
 
   31 Mar 2008; Diego Pettenò <flameeyes@gentoo.org> package.mask:
   Mask new openrc-needing ebuild, drop old mask.
