--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9812 (10 Apr 2008)
+
+  10 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9494.ebuild, +portage-2.2.00.9812.ebuild:
+  New snapshot, includes important fix in chpathtool
+
 *portage-2.2.00.9583 (28 Mar 2008)
 
   28 Mar 2008; Fabian Groffen <grobian@gentoo.org>
