New snapshot, fix for backtrace on preserve-libs; getlibpaths (Portage version: 2.2.00.9830-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020503

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9830 (11 Apr 2008)
+
+  11 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9812.ebuild, +portage-2.2.00.9830.ebuild:
+  New snapshot, fix for backtrace on preserve-libs; getlibpaths
+
 *portage-2.2.00.9812 (10 Apr 2008)
 
   10 Apr 2008; Fabian Groffen <grobian@gentoo.org>
