--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Apr 2008; Fabian Groffen <grobian@gentoo.org> +irix/profile.bashrc:
+  Add a profile.bashrc for IRIX with CONFIG_SHELL pointing to Prefix sh.
+  Trying out for bug #214455
+
   11 Apr 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask autoconf-2.62 for bug #217264
 
