--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9869 (13 Apr 2008)
+
+  13 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9500.ebuild, +portage-2.2.00.9869.ebuild:
+  New snapshot, with a wannabe workaround for bug #217481
+
 *portage-2.2.00.9831 (11 Apr 2008)
 
   11 Apr 2008; Fabian Groffen <grobian@gentoo.org>
