--- a/sys-apps/aix-miscutils/ChangeLog
+++ b/sys-apps/aix-miscutils/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aix-miscutils-0.1.1619 (14 Apr 2008)
+
+  14 Apr 2008; Michael Haubenwallner <haubi@gentoo.org>
+  -aix-miscutils-0.1.1618.ebuild, +aix-miscutils-0.1.1619.ebuild:
+  bumped to aix-miscutils-0.1.1619 for recursive lookups
+
 *aix-miscutils-0.1.1618 (14 Apr 2008)
 
   14 Apr 2008; Michael Haubenwallner <haubi@gentoo.org> +.,
