--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Apr 2008; Michael Haubenwallner <haubi@gentoo.org> aix/packages:
+  added sys-app/aix-miscutils to aix profiles.
+
   11 Apr 2008; Fabian Groffen <grobian@gentoo.org> +irix/profile.bashrc:
   Add a profile.bashrc for IRIX with CONFIG_SHELL pointing to Prefix sh.
   Trying out for bug #214455
