Replace previous snapshot which contains a backtrace on unmerging packages which have preserved-libs (Portage version: 2.2.00.9894-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
rename : sys-apps/portage/portage-2.2.00.9869.ebuild => sys-apps/portage/portage-2.2.00.9894.ebuild
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020660

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9894 (14 Apr 2008)
+
+  14 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9869.ebuild, +portage-2.2.00.9894.ebuild:
+  Replace previous snapshot which contains a backtrace on unmerging packages
+  which have preserved-libs
+
 *portage-2.2.00.9869 (13 Apr 2008)
 
   13 Apr 2008; Fabian Groffen <grobian@gentoo.org>
